Bugfix: Update clipping folder and email a friend modals for changes in formatastic classes that broke the button js. #210

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -63,9 +63,10 @@
     min-width: 150px;
     padding: 5px;
 
-    font-size: 12px;
-    input {
-      font-size: 12px;
+    font-size: modular-scale(0);
+    input,
+    button {
+      font-size: modular-scale(0);
     }
   }
   &.small  { min-width: 100px; }
