--- a/app/assets/stylesheets/components/email_a_friend.scss
+++ b/app/assets/stylesheets/components/email_a_friend.scss
@@ -88,7 +88,7 @@
       margin-top: 20px;
 
       .fr_button.medium input {
-        font-size: 16px;
+        font-size: modular-scale(0);
         height: 30px;
       }
 
